--- a/source-code-scanner-backend/package.json
+++ b/source-code-scanner-backend/package.json
@@ -20,24 +20,24 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "archiver": "^6.0.1",
     "bcryptjs": "^2.4.3",
+    "child_process": "^1.0.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs-extra": "^11.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "winston": "^3.11.0",
-    "jszip": "^3.10.1",
     "uuid": "^9.0.1",
-    "child_process": "^1.0.2",
-    "fs-extra": "^11.2.0",
-    "moment": "^2.30.1",
-    "archiver": "^6.0.1"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
