--- a/source-code-scanner-backend/Dockerfile
+++ b/source-code-scanner-backend/Dockerfile
@@ -1,3 +1,44 @@
+# # Dockerfile
+# FROM node:18-alpine
+
+# # Set working directory
+# WORKDIR /app
+
+# # Install dependencies for external tools
+# RUN apk add --no-cache python3 py3-pip git curl bash gcc g++ make
+
+# # Install semgrep
+# RUN pip3 install semgrep
+
+# # Install clang-tidy
+# RUN apk add --no-cache clang clang-extra-tools llvm
+
+# # Install snyk CLI
+# RUN npm install -g snyk
+
+# # Copy package.json and package-lock.json
+# COPY package*.json ./
+# RUN npm ci
+
+# # Create necessary directories
+# RUN mkdir -p uploads scans reports logs \
+#     src/rules/semgrep \
+#     src/rules/snyk \
+#     src/rules/clangtidy
+
+# # Copy application code
+# COPY . .
+
+# # Set environment variables
+# ENV NODE_ENV=production
+# ENV PORT=3001
+
+# # Expose port
+# EXPOSE 3001
+
+# # Run application
+# CMD ["node", "src/app.js"]
+
 # Dockerfile
 FROM node:18-alpine
 
@@ -5,7 +46,12 @@ FROM node:18-alpine
 WORKDIR /app
 
 # Install dependencies for external tools
-RUN apk add --no-cache python3 py3-pip git curl bash gcc g++ make
+RUN apk add --no-cache python3 py3-pip git curl bash gcc g++ make sudo
+
+# Create a non-root user
+RUN addgroup -g 1000 scanner && \
+    adduser -u 1000 -G scanner -s /bin/bash -D scanner && \
+    echo 'scanner ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers
 
 # Install semgrep
 RUN pip3 install semgrep
@@ -16,25 +62,12 @@ RUN apk add --no-cache clang clang-extra-tools llvm
 # Install snyk CLI
 RUN npm install -g snyk
 
+# Install Docker CLI (for running scanner containers)
+RUN curl -fsSL https://get.docker.com | sh
+
 # Copy package.json and package-lock.json
 COPY package*.json ./
 RUN npm ci
 
-# Create necessary directories
-RUN mkdir -p uploads scans reports logs \
-    src/rules/semgrep \
-    src/rules/snyk \
-    src/rules/clangtidy
-
-# Copy application code
-COPY . .
-
-# Set environment variables
-ENV NODE_ENV=production
-ENV PORT=3001
-
-# Expose port
-EXPOSE 3001
-
-# Run application
-CMD ["node", "src/app.js"]
+# Create necessary directories with proper permissions
+RUN mkdir -p uploads scans reports logs
