21/07/2025 vulnability phan user va admin

--- a/source-code-scanner-backend/src/rules/semgrep/use-after-free.yaml
+++ b/source-code-scanner-backend/src/rules/semgrep/use-after-free.yaml
@@ -42,7 +42,9 @@ rules:
               metavariable: $FUN
               patterns:
                 - pattern-not: free
-      - pattern-inside: free($PTR); ...
+      - pattern-either:
+          - pattern-inside: free($PTR); ...
+          - pattern-inside: $HEAP.deallocate($PTR); ...
       - pattern-not-inside: |
           free($PTR);
           ...
